--- a/app/src/main/res/drawable/gradient_dark.xml
+++ b/app/src/main/res/drawable/gradient_dark.xml
@@ -3,8 +3,8 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#99000000"
-                android:endColor="#50000000"
+                android:startColor="#000000"
+                android:endColor="#30000000"
                 android:angle="90"/>
         </shape>
 
