--- a/app/src/main/res/layout/fragment_blur_player.xml
+++ b/app/src/main/res/layout/fragment_blur_player.xml
@@ -174,6 +174,7 @@
                 class="com.kabouzeid.trebl.ui.fragments.player.blur.BlurPlayerPlaybackControlsFragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
                 sothree:layout_constraintTop_toBottomOf="@id/player_content"
                 sothree:layout_constraintBottom_toTopOf="@id/options_panel"
                 sothree:layout_constraintStart_toStartOf="parent"
@@ -218,7 +219,7 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:padding="8dp"
-                    android:src="@drawable/ic_menu_eq_24dp"
+                    android:src="@drawable/ic_eq"
                     android:layout_marginStart="32dp"
                     sothree:layout_constraintStart_toEndOf="@id/button_queue"
                     sothree:layout_constraintTop_toTopOf="parent"
