--- a/app/src/main/res/layout/fragment_blur_player_playback_controls.xml
+++ b/app/src/main/res/layout/fragment_blur_player_playback_controls.xml
@@ -9,22 +9,31 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/player_media_controller_container"
         android:background="@android:color/transparent">
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline50"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.5"
+            />
 
         <TextView
             android:id="@+id/player_song_current_progress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/regularfont"
-            android:paddingLeft="18dp"
+            android:fontFamily="@font/semiboldfont"
+            android:layout_marginBottom="1dp"
             android:singleLine="true"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/guideline50"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:textColor="?textColor"
-            android:textSize="12sp"
+            android:textColor="@color/white"
+            android:textSize="18sp"
             tools:ignore="RtlHardcoded,RtlSymmetry" />
 
         <TextView
@@ -32,29 +41,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/regularfont"
-            android:paddingRight="18dp"
+
+            android:layout_marginTop="1dp"
             android:singleLine="true"
-            app:layout_constraintTop_toTopOf="parent"
+            android:alpha="0.8"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/guideline50"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:textColor="?textColor"
+            android:textColor="@color/white"
             android:textSize="12sp"
             tools:ignore="RtlHardcoded,RtlSymmetry" />
 
-        <SeekBar
-            android:id="@+id/player_progress_slider"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:progressDrawable="@drawable/custom_seekbar"
-            android:progressBackgroundTint="?textColor"
-            android:thumb="@drawable/custom_thumb"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
+        <com.kabouzeid.trebl.ui.widget.avsb.AudioVisualSeekBar
+            android:id="@+id/visual_seek_bar"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:alpha="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/player_song_current_progress"
-             />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -80,7 +86,7 @@
             android:background="?attr/roundSelector"
             android:padding="22dp"
             android:scaleType="fitCenter"
-            android:tint="?textColor"
+            android:tint="@color/white"
             app:srcCompat="@drawable/ic_skip_previous_white_24dp"
             tools:ignore="MissingPrefix" />
 
@@ -96,7 +102,7 @@
             android:background="?attr/roundSelector"
             android:padding="22dp"
             android:scaleType="fitCenter"
-            android:tint="?textColor"
+            android:tint="@color/white"
             app:srcCompat="@drawable/ic_skip_next_white_24dp"
             tools:ignore="MissingPrefix" />
 
@@ -112,7 +118,7 @@
             android:background="?attr/roundSelector"
             android:padding="22dp"
             android:scaleType="fitCenter"
-            android:tint="?textColor"
+            android:tint="@color/white"
             android:visibility="gone"
             app:srcCompat="@drawable/ic_replay_10_white_24dp"
             tools:ignore="MissingPrefix" />
@@ -129,7 +135,7 @@
             android:background="?attr/roundSelector"
             android:padding="22dp"
             android:scaleType="fitCenter"
-            android:tint="?textColor"
+            android:tint="@color/white"
             android:visibility="gone"
             app:srcCompat="@drawable/ic_forward_10_white_24dp"
             tools:ignore="MissingPrefix" />
@@ -146,7 +152,7 @@
             android:background="?attr/roundSelector"
             android:padding="22dp"
             android:scaleType="fitCenter"
-            android:tint="?textColor"
+            android:tint="@color/white"
             app:srcCompat="@drawable/ic_repeat_white_24dp"
             tools:ignore="MissingPrefix" />
 
@@ -162,7 +168,7 @@
             android:background="?attr/roundSelector"
             android:padding="22dp"
             android:scaleType="fitCenter"
-            android:tint="?textColor"
+            android:tint="@color/white"
             app:srcCompat="@drawable/ic_shuffle_white_24dp"
             tools:ignore="MissingPrefix" />
 
