--- a/app/src/main/res/layout/item_grid_card_horizontal.xml
+++ b/app/src/main/res/layout/item_grid_card_horizontal.xml
@@ -5,6 +5,7 @@
     android:layout_height="148dp"
     android:layout_marginEnd="8dp"
     android:layout_marginRight="8dp"
+    app:cardCornerRadius="10dp"
     android:foreground="?attr/rectSelectorStrong"
     app:cardBackgroundColor="?cardBackgroundColor">
 
@@ -16,8 +17,8 @@
         <androidx.cardview.widget.CardView
             android:layout_width="104dp"
             android:layout_height="104dp"
-            app:cardCornerRadius="0dp"
-            >
+            app:cardCornerRadius="10dp">
+
         <ImageView
             android:id="@+id/image"
             android:layout_width="104dp"
