--- a/app/src/main/res/layout/item_grid.xml
+++ b/app/src/main/res/layout/item_grid.xml
@@ -19,6 +19,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+                app:cardCornerRadius="10dp"
+                >
+
             <ImageView
                 android:id="@+id/image"
                 android:layout_width="match_parent"
@@ -26,6 +33,7 @@
                 android:scaleType="centerCrop"
                 tools:ignore="ContentDescription" />
 
+            </androidx.cardview.widget.CardView>
 
 
         </com.kabouzeid.trebl.views.WidthFitSquareLayout>
@@ -33,11 +41,11 @@
         <LinearLayout
             android:id="@+id/palette_color_container"
             android:layout_width="match_parent"
-            android:layout_height="68dp"
+            android:layout_height="58dp"
             android:gravity="center_vertical"
             android:orientation="vertical"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp">
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp">
 
             <TextView
                 android:id="@+id/title"
