--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -78,6 +78,7 @@
 
     <item
         android:id="@+id/action_colored_footers"
+        android:visible="false"
         android:checkable="true"
         android:title="@string/colored_footers" />
 
