--- a/app/src/main/res/layout/fragment_mini_player.xml
+++ b/app/src/main/res/layout/fragment_mini_player.xml
@@ -15,20 +15,28 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <com.kabouzeid.trebl.views.IconImageView
-            android:id="@+id/mini_player_image"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/mini_player_image_holder"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:cardCornerRadius="8dp"
             android:layout_gravity="center_vertical"
-            android:layout_margin="16dp"
-            android:scaleType="centerCrop"
-            android:tint="?textColor"
-            app:srcCompat="@drawable/ic_expand_less_white_24dp"
-            tools:ignore="ContentDescription"
+            app:cardElevation="3dp"
+            android:layout_marginStart="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            >
+
+        <ImageView
+            android:id="@+id/mini_player_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            tools:ignore="ContentDescription"
             />
+
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/mini_player_title"
@@ -44,7 +52,7 @@
             android:singleLine="true"
             android:scrollHorizontally="true"
             android:marqueeRepeatLimit="marquee_forever"
-            app:layout_constraintStart_toEndOf="@id/mini_player_image"
+            app:layout_constraintStart_toEndOf="@id/mini_player_image_holder"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/mini_player_artist"
