--- a/app/src/main/res/xml/pref_colors.xml
+++ b/app/src/main/res/xml/pref_colors.xml
@@ -11,7 +11,12 @@
             android:key="general_theme"
             android:negativeButtonText="@null"
             android:positiveButtonText="@null"
-            android:title="@string/pref_title_general_theme" />
+            android:title="App Theme" />
+
+        <com.kabouzeid.trebl.preferences.NowPlayingScreenPreference
+            app:iconSpaceReserved="false"
+            android:key="now_playing_screen_id"
+            android:title="Now Playing Theme" />
 
         <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEColorPreference
             app:iconSpaceReserved="false"
