--- a/app/src/main/res/layout/item_grid.xml
+++ b/app/src/main/res/layout/item_grid.xml
@@ -41,9 +41,11 @@
         <LinearLayout
             android:id="@+id/palette_color_container"
             android:layout_width="match_parent"
-            android:layout_height="58dp"
+            android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="vertical"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
             android:paddingLeft="5dp"
             android:paddingRight="5dp">
 
@@ -51,7 +53,7 @@
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-medium"
+                android:textStyle="bold"
                 android:singleLine="true"
                 android:textColor="?textColor"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
@@ -60,6 +62,7 @@
                 android:id="@+id/text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:alpha="0.7"
                 android:singleLine="true"
                 android:textColor="?textColor"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
