Changed miniplayer design - circular progress & dynamic color background
- Replaced old progress bar with circular progress indicator.
- Miniplayer background and progressIndicator  adopt tint of album art.
- Animated miniplayer background color transitions.
- Minor UI adjustments.

--- a/app/src/main/res/layout/sliding_music_panel_layout.xml
+++ b/app/src/main/res/layout/sliding_music_panel_layout.xml
@@ -7,7 +7,7 @@
     android:gravity="bottom"
     sothree:umanoOverlay="false"
     sothree:umanoPanelHeight="0dp"
-    sothree:umanoShadowHeight="@dimen/card_elevation">
+    sothree:umanoShadowHeight="0dp">
 
     <FrameLayout
         android:id="@+id/content_container"
