--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -22,6 +22,8 @@
 
     <attr name="fabIconColor" format="color" />
 
+    <attr name="circularProgressTrack" format="color" />
+
     <attr name="starsVisibilityMode" format="integer">
         <enum name="visible" value="0" />
         <enum name="gone" value="2" />
