--- a/app/src/main/res/values/styles_parents.xml
+++ b/app/src/main/res/values/styles_parents.xml
@@ -41,7 +41,7 @@
         <item name="libraryTitleColor">#ffffff</item>
         <item name="materialSecondary">#10ffffff</item>
         <item name="fabIconColor">@color/black</item>
-
+        <item name="circularProgressTrack">#20ffffff</item>
     </style>
 
     <style name="Theme.Phonograph.Base.Light" parent="Theme.AppCompat.Light.NoActionBar">
@@ -83,6 +83,7 @@
         <item name="libraryTitleColor">#ffffff</item>
         <item name="materialSecondary">#E0E0E0</item>
         <item name="fabIconColor">@color/white</item>
+        <item name="circularProgressTrack">#20000000</item>
     </style>
 
     <style name="Theme.Phonograph.Base.Black" parent="@style/Theme.Phonograph.Base">
