--- a/app/src/main/res/layout/fragment_mini_player.xml
+++ b/app/src/main/res/layout/fragment_mini_player.xml
@@ -45,43 +45,40 @@
 
         </androidx.cardview.widget.CardView>
 
-        <TextView
-            android:id="@+id/mini_player_title"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="5dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="0dp"
-            android:layout_marginStart="16dp"
-            android:textColor="?textColor"
-            android:textStyle="bold"
-            android:gravity="center_vertical"
-            android:singleLine="true"
-            android:scrollHorizontally="true"
-            android:marqueeRepeatLimit="marquee_forever"
-            app:layout_constraintStart_toEndOf="@id/mini_player_image_holder"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/mini_player_artist"
-            />
-
-        <TextView
-            android:id="@+id/mini_player_artist"
+        <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="vertical"
             android:layout_marginEnd="16dp"
-            android:layout_marginLeft="0dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:layout_marginStart="0dp"
-            android:layout_weight="1"
-            android:textColor="?textColor"
-            android:gravity="center_vertical"
-            android:singleLine="true"
+            android:layout_marginStart="16dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/mini_player_title"
+            app:layout_constraintStart_toEndOf="@id/mini_player_image_holder"
             app:layout_constraintEnd_toStartOf="@id/play_button_layout"
-            />
+            >
+
+            <TextView
+                android:id="@+id/mini_player_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="15sp"
+                android:singleLine="true"
+                android:textColor="?textColor"
+                />
+
+            <TextView
+                android:id="@+id/mini_player_artist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:alpha="0.7"
+                android:singleLine="true"
+                android:textSize="12sp"
+                android:textColor="?textColor" />
+        </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/play_button_layout"
