--- a/app/src/main/res/drawable/theme_layout_dark_bg.xml
+++ b/app/src/main/res/drawable/theme_layout_dark_bg.xml
@@ -3,8 +3,8 @@
     <item>
         <shape>
             <corners
-                android:topRightRadius="20dp"
-
+                android:topRightRadius="0dp"
+                android:topLeftRadius="0dp"
                 />
             <solid
                 android:color="@color/black"
